kubernetes/apps/uptime-kuma/environments/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
spec:
  selector:
    app: uptime-kuma
  ports:
    - port: 3001
      targetPort: 3001
      name: http
      appProtocol: kubernetes.io/ws
